desktopCapture: set the correct videoTrack label according to the capture type

Currently during desktopCature we always set vieoTrack label as "screen" to all the screen/window/tab capture.

This cl is to set the label with correct prefix to each capture type, i.e.
screen capture -- screen:x:x
window capture -- window:x:x
tab capture    -- web-contents-media-stream:x:x

BUG=724668

Review-Url: https://codereview.chromium.org/2890303003
Cr-Commit-Position: refs/heads/master@{#473529}

Former-commit-id: 5bcd03be11700eb3bd3755593f5a07530940e789